added a styles.css

--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coco Nut</title>
+    <link rel="stylesheet" href="Styles/styles.css">
 </head>
 <body>
     <header>
+        <nav>
+
+        </nav>
                     
     </header>
     <main>
