--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <h3 class="secondary-color nav-title ">Coco<span class="primary-color">Nerd</span></h3>
             <ul>
-                <li><a href=""><button>Sign Up</button></a></li>
+                <li><a href=""><button class="btn-primary">Sign Up</button></a></li>
             </ul>
 
 
