--- a/index.html
+++ b/index.html
@@ -10,18 +10,59 @@
     <link rel="stylesheet" href="Styles/styles.css">
 </head>
 <body class="raleway-normal">
-    <header>
+    <header class="header">
         <nav>
             <h3 class="secondary-color nav-title ">Coco<span class="primary-color">Nerd</span></h3>
             <ul>
                 <li><a href=""><button class="btn-primary">Sign Up</button></a></li>
             </ul>
-
-
         </nav>
+
+        <div class="banner">
+            <h1 class="banner-title">Cool Dark UI Template for Webflow Agencies!</h1>
+            <button class="btn-primary secondary-color">Stay Focused</button>
+        </div>
+
+        
                     
     </header>
     <main>
+
+        <section>
+
+            <div class="action-items">
+                <div class="action-text-items">
+                    <h2 class="action-title secondary-color " >See It in Action</h2>
+                    <p class="action-discription tertiary-color">Explore the live preview and imagine your brand in this bold new look.</p>
+                    <button class="btn-primary">Launch Live Preview</button>
+                </div>
+                <div>
+                    <img class="action-image-item" src="images/wc-mini.png" alt="webflow cof 2022 image">
+                </div>
+            </div>
+        </section>
+
+        <section class="profile">
+
+            <div class="profile-items">
+                <h2 class="profile-title">Joined Thousands of Productive Users</h2>
+                <div class="profile-matrics">
+                    <div>
+                        <h3 class="primary-color text-size">50K</h3>
+                        <p class="tertiary-color">Active Users</p>
+                    </div>
+                    <div>
+                        <h3 class="primary-color text-size" >2M+</h3>
+                        <p class="tertiary-color">Focus Sessions</p>
+                    </div>
+                    <div>
+                        <h3 class="primary-color text-size" >90%</h3>
+                        <p class="tertiary-color">Satisfaction Rate</p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
 
     </main>
     <footer>
