--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coco Nerd</title>
+    <title>CocoNerd</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -61,6 +61,41 @@
                     </div>
                 </div>
             </div>
+
+        </section>
+
+        <section class="lead-form">
+            <div class="lead-column">
+                <h2 class="secondary-color action-text">Let’s Get in Touch</h2>
+            </div>
+            <div class="lead-column"></div>
+            <form action="">
+
+                <div>
+                    <h5>Email</h5>
+                    <input type="email" placeholder="example@email.com">
+                </div>
+
+                <div>
+                    <h5>Name</h5>
+                    <input type="text" placeholder="full name">
+                </div>
+
+                <div>
+                    <h5>Message</h5>
+                    <textarea name="" id="" cols="30" rows="10" placeholder="write your message...."></textarea>
+                </div>
+
+                <div>
+                    <input  type="submit" value="Get in Touch" >
+                </div>
+
+                
+
+
+            </form>
+
+
 
         </section>
 
