added lead form last touch

--- a/index.html
+++ b/index.html
@@ -72,22 +72,22 @@
             <form action="">
 
                 <div>
-                    <h5>Email</h5>
-                    <input type="email" placeholder="example@email.com">
+                    <h5 class=".input-title">Email</h5>
+                    <input class="input-fill" type="email" placeholder="example@email.com">
                 </div>
 
                 <div>
-                    <h5>Name</h5>
-                    <input type="text" placeholder="full name">
+                    <h5 class=".input-title">Name</h5>
+                    <input class="input-fill" type="text" placeholder="full name">
                 </div>
 
                 <div>
-                    <h5>Message</h5>
-                    <textarea name="" id="" cols="30" rows="10" placeholder="write your message...."></textarea>
+                    <h5 class=".input-title">Message</h5>
+                    <textarea class="input-fill" name="" id="" cols="30" rows="10" placeholder="write your message...."></textarea>
                 </div>
 
                 <div>
-                    <input  type="submit" value="Get in Touch" >
+                    <input class="btn-second" type="submit" value="Get in Touch" >
                 </div>
 
                 
